# Agent-JobHunting

./: .gitignore  Agent-JobHunting_技术文档_20260601_140420.md  Agent-JobHunting_电子科大实习招聘数据源更新_20260606.md  JobBrowsingAgent_技术Idea文档2026-6-1.txt  README.md  start_webui.ps1
browser_agent/: .gitignore  README.md  pyproject.toml
browser_agent/config/: sources.json
browser_agent/scripts/: browser_sync_jobs.py  register_browser_sync_task.ps1  run_browser_agent.py  run_browser_sync.ps1
browser_agent/src/job_browsing_agent/: __init__.py  adapters.py  api_extractors.py  extractors.py  llm.py  models.py  quality.py  runner.py
browser_agent/src/job_sync/: __init__.py  models.py  repository.py
browser_agent/tests/: test_api_extractors.py  test_extractors.py  test_repository.py
langchain_agent/: .env.example  .gitignore  Job_agent.ipynb  README.md  pyproject.toml
langchain_agent/scripts/: rebuild_index.py  sync_index.py
langchain_agent/src/job_agent/: __init__.py  agent.py  config.py  db.py  main.py  rag.py  resume.py  sessions.py  tools.py  web.py  web_agent.py
langchain_agent/src/job_agent/static/: admin.css  admin.html  admin.js  app.js  index.html  style.css
